Implantação do flexbox na tela de escudos

--- a/paginas/Hino.html
+++ b/paginas/Hino.html
@@ -1,73 +1,74 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>VAI CORINTHIANS</title>
-        <link rel="stylesheet" href="../estilos/estilos.css">
-    </head>
-    <body>
+<head>
+    <meta charset="UTF-8">
+    <title>VAI CORINTHIANS</title>
+    <link rel="stylesheet" href="../estilos/estilos.css">
+</head>
+<body>
+    <div class = "cabecalho">
         <header>
             <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
-            <img src="../Imagens/altaneira.jpeg" title= "curinthia" alt="nao carregou" width="500"/>
-            <h2 class="altaneiro">"SEMPRE ALTANEIRO"</h2>   
+            <img src="../Imagens/altaneira.jpeg" title= "curinthia" alt="nao carregou" width="500"/>            
+            <h2 class="altaneiro">"SEMPRE ALTANEIRO"</h2>
         </header>
-        <main>
-            <nav>
-                ||  <a href="../paginas/index.html">História</a> ||
-                    <a href="../paginas/idolos.html">Ídolos</a> ||
-                    <a href="../paginas/titulos.html">Títulos</a> ||
-                    <a href="../paginas/hino.html">Hino</a> ||
-                    <a href="../paginas/escudo.html">Escudo</a> ||
-                    <a href="../paginas/mascote.html">Mascote</a> ||
-                    <a href="../paginas/camisas.html">Camisas</a> ||
-                    <a href="../paginas/torcida.html">Torcida</a> ||
-                    <a href="../paginas/contato.html">Contato</a> ||
-            </nav>
-            <hr>
-            <section>
-                <article>
-                    <h2 class="black">HINO</h2>
-                    <hr>
-                    <img src="../Imagens/cantandohino.jpg" title="cantandohino" alt="não carregou" width="400"/>
-                    <h2>O PRIMEIRO HINO</h2>
-                    <p>"Salve o Corinthians, o campeão dos campeões". O hino do Corinthians nem sempre começou com esse famoso verso. Em 1930, a primeira composição dedicada ao clube era intitulada como uma "marchinha". Oferecido ao presidente Felipe Collona, que dirigiu o Timão entre 1929 e 1930, o primeiro hino da história foi gravado pela dupla Guarani e Pirajá. A música, escrita por La Rosa e letrada por Eduardo Dohmen, permanece eternizada pelo vocabulário e gênero musical típico.</p>
-                    <P>Luctar… Luctar…<br>
-                        É nosso lema sempre, para a glória,<br>
-                        Jogar… Jogar…<br>
-                        E conquistar os louros da victória,<br>
-                        E proclamar, nosso pendão<br>
-                        É alvinegro e sempre há de brilhar,<br>
-                        Luctar, viril<br>
-                        Para a grandeza e glória do Brasil<br>
-                        Corinthians… Corinthians…<br>
-                        A glória será o teu repouso<br>
-                        E nós unidos sempre<br>
-                        Elevaremos teu nome glorioso.</P>
-                    <hr>
-                </article>
-                <article>
-                    <h2>HINO ATUAL</h2>
-                    <p>O segundo e atual hino do Timão foi composto pelo radialista Lauro D'Avila em 1953. Com uma letra muito próxima ao que a torcida sentia em relação ao Corinthians, o hino rapidamente ficou marcado, ao contrário do primeiro, que, aos poucos, ficou no anonimato. Gravado pela primeira vez nos estúdios da Rádio Bandeirantes e lançado pela gravadora Continental, sob a voz cantor Osny Silva, "O Campeão dos Campeões" permanece até hoje entoado nos estádios em que o Timão joga.</p> 
-                    <p>Salve o Corinthians<br>
-                        O campeão dos campeões<br>
-                        Eternamente<br>
-                        Dentro dos nossos corações<br>
-                        Salve o Corinthians<br>
-                        De tradições e glórias mil<br>
-                        Tu és orgulho<br>
-                        Dos desportistas do Brasil<br>
-                        Teu passado é uma bandeira<br>
-                        Teu presente, uma lição<br>
-                        Figuras entre os primeiros<br>
-                        Do nosso esporte bretão<br>
-                        Corinthians grande<br>
-                        Sempre altaneiro<br>
-                        És do Brasil<br>
-                        O clube mais brasileiro</p>   
-                </article>
-            </section>
-        </main>
+         <nav>
+            ||  <a href="../paginas/index.html">História</a> ||
+                <a href="../paginas/idolos.html">Ídolos</a> ||
+                <a href="../paginas/titulos.html">Títulos</a> ||
+                <a href="../paginas/hino.html">Hino</a> ||
+                <a href="../paginas/escudo.html">Escudo</a> ||
+                <a href="../paginas/mascote.html">Mascote</a> ||
+                <a href="../paginas/camisas.html">Camisas</a> ||
+                <a href="../paginas/torcida.html">Torcida</a> ||
+                <a href="../paginas/contato.html">Contato</a> ||
+        </nav>
+    </div>
         <hr>
-        <footer>Copyright © 2013-2023 Altaneiro. Todos os direitos reservados.</footer>
-    </body>
+        <section>
+            <article>
+                <h2 class="black">HINO</h2>
+                <hr>
+                <img src="../Imagens/cantandohino.jpg" title="cantandohino" alt="não carregou" width="400"/>
+                <h2>O PRIMEIRO HINO</h2>
+                <p>"Salve o Corinthians, o campeão dos campeões". O hino do Corinthians nem sempre começou com esse famoso verso. Em 1930, a primeira composição dedicada ao clube era intitulada como uma "marchinha". Oferecido ao presidente Felipe Collona, que dirigiu o Timão entre 1929 e 1930, o primeiro hino da história foi gravado pela dupla Guarani e Pirajá. A música, escrita por La Rosa e letrada por Eduardo Dohmen, permanece eternizada pelo vocabulário e gênero musical típico.</p>
+                <P>Luctar… Luctar…<br>
+                    É nosso lema sempre, para a glória,<br>
+                    Jogar… Jogar…<br>
+                    E conquistar os louros da victória,<br>
+                    E proclamar, nosso pendão<br>
+                    É alvinegro e sempre há de brilhar,<br>
+                    Luctar, viril<br>
+                    Para a grandeza e glória do Brasil<br>
+                    Corinthians… Corinthians…<br>
+                    A glória será o teu repouso<br>
+                    E nós unidos sempre<br>
+                    Elevaremos teu nome glorioso.</P>
+                <hr>
+            </article>
+            <article>
+                <h2>HINO ATUAL</h2>
+                <p>O segundo e atual hino do Timão foi composto pelo radialista Lauro D'Avila em 1953. Com uma letra muito próxima ao que a torcida sentia em relação ao Corinthians, o hino rapidamente ficou marcado, ao contrário do primeiro, que, aos poucos, ficou no anonimato. Gravado pela primeira vez nos estúdios da Rádio Bandeirantes e lançado pela gravadora Continental, sob a voz cantor Osny Silva, "O Campeão dos Campeões" permanece até hoje entoado nos estádios em que o Timão joga.</p> 
+                <p>Salve o Corinthians<br>
+                    O campeão dos campeões<br>
+                    Eternamente<br>
+                    Dentro dos nossos corações<br>
+                    Salve o Corinthians<br>
+                    De tradições e glórias mil<br>
+                    Tu és orgulho<br>
+                    Dos desportistas do Brasil<br>
+                    Teu passado é uma bandeira<br>
+                    Teu presente, uma lição<br>
+                    Figuras entre os primeiros<br>
+                    Do nosso esporte bretão<br>
+                    Corinthians grande<br>
+                    Sempre altaneiro<br>
+                    És do Brasil<br>
+                    O clube mais brasileiro</p>   
+            </article>
+        </section>
+    </main>
+    <hr>
+    <footer>Copyright © 2013-2023 Altaneiro. Todos os direitos reservados.</footer>
+</body>
 </html>
