--- a/paginas/index.html
+++ b/paginas/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
 <body>
-    <div class = cabecalho>
+    <div class = "cabecalho">
         <header>
             <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
             <img src="../Imagens/altaneira.jpeg" title= "curinthia" alt="nao carregou" width="500"/>            
