--- a/paginas/torcida.html
+++ b/paginas/torcida.html
@@ -6,22 +6,24 @@
     <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
 <body>
-    <header>
-        <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
-        <img src="../Imagens/altaneira.jpeg" title="Corinthians" alt="Não carregou" width="500"/>            
-        <h2 class="altaneiro">"SEMPRE ALTANEIRO"</h2>
-    </header>
-    <nav>
-        ||  <a href="../paginas/index.html">História</a> ||
-            <a href="../paginas/idolos.html">Ídolos</a> ||
-            <a href="../paginas/titulos.html">Títulos</a> ||
-            <a href="../paginas/hino.html">Hino</a> ||
-            <a href="../paginas/escudo.html">Escudo</a> ||
-            <a href="../paginas/mascote.html">Mascote</a> ||
-            <a href="../paginas/camisas.html">Camisas</a> ||
-            <a href="../paginas/torcida.html">Torcida</a> ||
-            <a href="../paginas/contato.html">Contato</a> ||
-    </nav>
+    <div class = "cabecalho">
+        <header>
+            <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
+            <img src="../Imagens/altaneira.jpeg" title= "curinthia" alt="nao carregou" width="500"/>            
+            <h2 class="altaneiro">"SEMPRE ALTANEIRO"</h2>
+        </header>
+         <nav>
+            ||  <a href="../paginas/index.html">História</a> ||
+                <a href="../paginas/idolos.html">Ídolos</a> ||
+                <a href="../paginas/titulos.html">Títulos</a> ||
+                <a href="../paginas/hino.html">Hino</a> ||
+                <a href="../paginas/escudo.html">Escudo</a> ||
+                <a href="../paginas/mascote.html">Mascote</a> ||
+                <a href="../paginas/camisas.html">Camisas</a> ||
+                <a href="../paginas/torcida.html">Torcida</a> ||
+                <a href="../paginas/contato.html">Contato</a> ||
+        </nav>
+    </div>
     <hr>
     <main>
         <h2 class="black">O 12º JOGADOR</h2>
