--- a/paginas/mascote.html
+++ b/paginas/mascote.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
 <body>
-    <header>
-        <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
-        <img src="../Imagens/altaneira.jpeg" alt="nao carregou" title="curinthia" width="500">
-        <h2 class="altaneiro">"SEMPRE ALTANEIRO"</h2>      
-    </header>
-    <main>
-        <nav>
+    <div class = "cabecalho">
+        <header>
+            <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
+            <img src="../Imagens/altaneira.jpeg" title= "curinthia" alt="nao carregou" width="500"/>            
+            <h2 class="altaneiro">"SEMPRE ALTANEIRO"</h2>
+        </header>
+         <nav>
             ||  <a href="../paginas/index.html">História</a> ||
                 <a href="../paginas/idolos.html">Ídolos</a> ||
                 <a href="../paginas/titulos.html">Títulos</a> ||
@@ -23,6 +23,7 @@
                 <a href="../paginas/torcida.html">Torcida</a> ||
                 <a href="../paginas/contato.html">Contato</a> ||
         </nav>
+    </div>
         <hr>
         <section>
             <h1 class=" titulo">O MOSQUETEIRO CORINTHIANO</h1>
