--- a/paginas/mascote.html
+++ b/paginas/mascote.html
@@ -1,18 +1,23 @@
 <!doctype html>
 <html>
 <head>
+    <style>
+        .mosq{
+            display: flex;
+        }
+    </style>
     <meta charset="UTF-8">
     <title>VAI CORINTHIANS</title>
     <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
 <body>
-    <div class = "cabecalho">
+    <div class="cabecalho">
         <header>
             <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
-            <img src="../Imagens/altaneira.jpeg" title= "curinthia" alt="nao carregou" width="500"/>            
+            <img src="../Imagens/altaneira.jpeg" title="Corinthians" alt="Não carregou" width="500"/>            
             <h2 class="altaneiro">"SEMPRE ALTANEIRO"</h2>
         </header>
-         <nav>
+        <nav>
             ||  <a href="../paginas/index.html">História</a> ||
                 <a href="../paginas/idolos.html">Ídolos</a> ||
                 <a href="../paginas/titulos.html">Títulos</a> ||
@@ -23,24 +28,28 @@
                 <a href="../paginas/torcida.html">Torcida</a> ||
                 <a href="../paginas/contato.html">Contato</a> ||
         </nav>
-    </div>
+        </div>
         <hr>
         <section>
-            <h1 class=" titulo">O MOSQUETEIRO CORINTHIANO</h1>
+            <h2 class="black">O MOSQUETEIRO CORINTHIANO</h2>
             <hr>
             <p>Existem duas versões sobre a origem do Mosqueteiro Corinthiano. Sinônimo de fibra, garra e valentia, o mascote caiu como uma luva para o time do Parque São Jorge. O Corinthians, que já nasceu lutando contra as dificuldades dos operários em jogar futebol, tinha tudo para ser uma equipe guerreira.</p>
             <article>
                 <hr>
-                <h2>Primeira Versão</h2>
+                <h2 style="text-align: center;">PRIMEIRA VERSÃO</h2>
+            <div class="mosq">
                 <img src="../Imagens/mosqueteiro1.jpg" title="mosqueteirocorinthiano" alt="mosqueteiro" width="200">
-                <p>Como tinham outros times disputando a vaga, o plantel alvinegro participou de um torneio contra o Minas Gerais e o antigo São Paulo, clubes também da várzea. Foi com um placar de 1 a 0 que o Corinthians derrotou o Minas e, logo em seguida, massacrou o São Paulo com quatro bolas na rede. Com isso, o Timão entrou na Divisão Especial da Liga, em 1914.
+                <p class="certo">Como tinham outros times disputando a vaga, o plantel alvinegro participou de um torneio contra o Minas Gerais e o antigo São Paulo, clubes também da várzea. Foi com um placar de 1 a 0 que o Corinthians derrotou o Minas e, logo em seguida, massacrou o São Paulo com quatro bolas na rede. Com isso, o Timão entrou na Divisão Especial da Liga, em 1914.
                 </p>
+            </div>
             </article>
             <hr>
             <article>
-                <h2>Segunda Versão</h2>
+                <h2 style="text-align: center;">SEGUNDA VERSÃO</h2>
+            <div class="mosq">
                 <img src="../Imagens/mosqueteiro.jpeg" title="mosqueteirocorinthiano" alt="mosqueteiro" width="200">
-                <p>Em fevereiro de 1929, o Corinthians conquistou sua primeira vitória internacional em um amistoso contra o Barracas, da Argentina, com um placar de 3 a 1 no Parque São Jorge. Essa partida histórica ficou marcada pela intensa determinação de ambos os times em vencer, com Thomaz Mazzoni, um cronista da Gazeta Esportiva, comparando os jogadores corinthianos a mosqueteiros valentes, destacando sua força e coragem. A partir desse momento, o Mosqueteiro se tornou o símbolo do Corinthians, representando sua inteligência, habilidade e fibra.</p>
+                <p class="certo">Em fevereiro de 1929, o Corinthians conquistou sua primeira vitória internacional em um amistoso contra o Barracas, da Argentina, com um placar de 3 a 1 no Parque São Jorge. Essa partida histórica ficou marcada pela intensa determinação de ambos os times em vencer, com Thomaz Mazzoni, um cronista da Gazeta Esportiva, comparando os jogadores corinthianos a mosqueteiros valentes, destacando sua força e coragem. A partir desse momento, o Mosqueteiro se tornou o símbolo do Corinthians, representando sua inteligência, habilidade e fibra.</p>
+            </div>
             </article>
         </section>
     </main>
