--- a/paginas/Titulos.html
+++ b/paginas/Titulos.html
@@ -28,88 +28,90 @@
         <hr>
         <h2 class="black">SALA DE TROFÉUS</h2>
         <hr>
-        <img src="../Imagens/saladetrofeusverdadeira.jpg" title="trofeus" alt="não carregou" width="500"/>
-        <table>
-            <thead>
-                <tr>
-                    <th>Competições</th>
-                    <th>Títulos</th>
-                    <th>Temporadas</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Copa Paulista</td>
-                    <td>01</td>
-                    <td>1962</td>
-                </tr>
-                <tr>
-                    <td>Supercopa do Brasil</td>
-                    <td>01</td>
-                    <td>1991</td>
-                </tr>
-                <tr>
-                    <td>Campeonato Brasileiro - Série B</td>
-                    <td>01</td>
-                    <td>2008</td>
-                </tr>
-                <tr>
-                    <td>Copa Libertadores da América</td>
-                    <td>01</td>
-                    <td>2012</td>
-                </tr>
-                <tr>
-                    <td>Tríplice Coroa Internacional</td>
-                    <td>01</td>
-                    <td>2013</td>
-                </tr>
-                <tr>
-                    <td>Recopa Sul-Americana</td>
-                    <td>01</td>
-                    <td>2013</td>
-                </tr>
-                <tr>
-                    <td>Taça dos Campeões Rio-São Paulo</td>
-                    <td>02</td>
-                    <td>1929, 1941</td>
-                </tr>
-                <tr>
-                    <td>Copa do Mundo de Clubes da FIFA</td>
-                    <td>02</td>
-                    <td>2000, 2012</td>
-                </tr>
-                <tr>
-                    <td>Copa do Brasil</td>
-                    <td>03</td>
-                    <td>1995, 2002, 2009</td>
-                </tr>
-                <tr>
-                    <td>Torneio Rio-São Paulo</td>
-                    <td>05</td>
-                    <td>1950, 1953, 1954, 1966, 2002</td>
-                </tr>
-                <tr>
-                    <td>Campeonato Brasileiro</td>
-                    <td>07</td>
-                    <td>1990, 1998, 1999, 2005, 2011,<br>2015, 2017</td>
-                </tr>
-                <tr>
-                    <td>Campeonato Paulista</td>
-                    <td>30</td>
-                    <td>1914, 1916, 1922, 1923, 1924,
-                        <br> 
-                        1928, 1929, 1930, 1937, 1938,
-                        <br> 
-                        1939, 1941, 1951, 1952, 1954,
-                        <br> 
-                        1977, 1979, 1982, 1983, 1988,
-                        <br> 
-                        1995, 1997, 1999, 2001, 2003,
-                        <br> 
-                        2009, 2013, 2017, 2018, 2019</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="table-container">
+            <!-- <img src="../Imagens/saladetrofeusverdadeira.jpg" title="trofeus" alt="não carregou" width="500"/> -->
+            <table>
+                    <thead>
+                            <tr>
+                                <th>Competições</th>
+                                <th>Títulos</th>
+                                <th>Temporadas</th>
+                            </tr>
+                    </thead>
+                <tbody>
+                    <tr>
+                        <td>Copa Paulista</td>
+                        <td>01</td>
+                        <td>1962</td>
+                    </tr>
+                    <tr>
+                        <td>Supercopa do Brasil</td>
+                        <td>01</td>
+                        <td>1991</td>
+                    </tr>
+                    <tr>
+                        <td>Campeonato Brasileiro - Série B</td>
+                        <td>01</td>
+                        <td>2008</td>
+                    </tr>
+                    <tr>
+                        <td>Copa Libertadores da América</td>
+                        <td>01</td>
+                        <td>2012</td>
+                    </tr>
+                    <tr>
+                        <td>Tríplice Coroa Internacional</td>
+                        <td>01</td>
+                        <td>2013</td>
+                    </tr>
+                    <tr>
+                        <td>Recopa Sul-Americana</td>
+                        <td>01</td>
+                        <td>2013</td>
+                    </tr>
+                    <tr>
+                        <td>Taça dos Campeões Rio-São Paulo</td>
+                        <td>02</td>
+                        <td>1929, 1941</td>
+                    </tr>
+                    <tr>
+                        <td>Copa do Mundo de Clubes da FIFA</td>
+                        <td>02</td>
+                        <td>2000, 2012</td>
+                    </tr>
+                    <tr>
+                        <td>Copa do Brasil</td>
+                        <td>03</td>
+                        <td>1995, 2002, 2009</td>
+                    </tr>
+                    <tr>
+                        <td>Torneio Rio-São Paulo</td>
+                        <td>05</td>
+                        <td>1950, 1953, 1954, 1966, 2002</td>
+                    </tr>
+                    <tr>
+                        <td>Campeonato Brasileiro</td>
+                        <td>07</td>
+                        <td>1990, 1998, 1999, 2005, 2011,<br>2015, 2017</td>
+                    </tr>
+                    <tr>
+                        <td>Campeonato Paulista</td>
+                        <td>30</td>
+                        <td>1914, 1916, 1922, 1923, 1924,
+                            <br> 
+                            1928, 1929, 1930, 1937, 1938,
+                            <br> 
+                            1939, 1941, 1951, 1952, 1954,
+                            <br> 
+                            1977, 1979, 1982, 1983, 1988,
+                            <br> 
+                            1995, 1997, 1999, 2001, 2003,
+                            <br> 
+                            2009, 2013, 2017, 2018, 2019</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
     <hr>
     <footer>Copyright © 2013-2023 Altaneiro. Todos os direitos reservados.</footer>
