--- a/paginas/contato.html
+++ b/paginas/contato.html
@@ -6,41 +6,43 @@
     <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
 <body>
-    <div class = "cabecalho">
-        <header>
-            <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
-            <img src="../Imagens/altaneira.jpeg" title= "curinthia" alt="nao carregou" width="500"/>            
-            <h2 class="altaneiro">"SEMPRE ALTANEIRO"</h2>
-        </header>
-         <nav>
-            ||  <a href="../paginas/index.html">História</a> ||
-                <a href="../paginas/idolos.html">Ídolos</a> ||
-                <a href="../paginas/titulos.html">Títulos</a> ||
-                <a href="../paginas/hino.html">Hino</a> ||
-                <a href="../paginas/escudo.html">Escudo</a> ||
-                <a href="../paginas/mascote.html">Mascote</a> ||
-                <a href="../paginas/camisas.html">Camisas</a> ||
-                <a href="../paginas/torcida.html">Torcida</a> ||
-                <a href="../paginas/contato.html">Contato</a> ||
-        </nav>
-    </div>
+    <main>
+        <div class = "cabecalho">
+            <header>
+                <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
+                <img src="../Imagens/altaneira.jpeg" title= "curinthia" alt="nao carregou" width="500"/>            
+                <h2 class="altaneiro">"SEMPRE ALTANEIRO"</h2>
+            </header>
+            <nav>
+                ||  <a href="../paginas/index.html">História</a> ||
+                    <a href="../paginas/idolos.html">Ídolos</a> ||
+                    <a href="../paginas/titulos.html">Títulos</a> ||
+                    <a href="../paginas/hino.html">Hino</a> ||
+                    <a href="../paginas/escudo.html">Escudo</a> ||
+                    <a href="../paginas/mascote.html">Mascote</a> ||
+                    <a href="../paginas/camisas.html">Camisas</a> ||
+                    <a href="../paginas/torcida.html">Torcida</a> ||
+                    <a href="../paginas/contato.html">Contato</a> ||
+            </nav>
+        </div>
             <hr>
             <article>
                 <h2 class="black">CONTATE-NOS</h2>
                 <hr>
-                <img src="../Imagens/gaviaodafiel.jpeg" title="gaviaodafiel" alt="gaviao" width="350">
-                <form>
-                    <label class="nome">Nome</label>
-                    <input type=text/><br>
-                    <label class="email">e-mail</label>
-                    <input type="text"/><br>
-                    <label>Sexo</label>
-                    <input type="text"/><br>
-                    <label for="birthday">Nascimento</label>
-                    <input type="date" name="birthday" id="birthday" min="2000-01-01" max="2023-12-12"><br>
-                    <button>Enviar</button>
-                    <p></p>
-                </form>
+                <div class="contato">
+                    <img src="../Imagens/gaviaodafiel.jpeg" title="gaviaodafiel" alt="gaviao" width="350">
+                    <form>
+                        <label class="nome">Nome</label>
+                        <input type=text/><br>
+                        <label class="email">e-mail</label>
+                        <input type="text"/><br>
+                        <label>Sexo</label>
+                        <input type="text"/><br>
+                        <label for="birthday">Nascimento</label>
+                        <input type="date" name="birthday" id="birthday" min="2000-01-01" max="2023-12-12"><br>
+                        <button>Enviar</button>
+                    </form>
+                </div>
             </article>
         </section>
     </main>
