--- a/paginas/contato.html
+++ b/paginas/contato.html
@@ -5,7 +5,17 @@
     <title>VAI CORINTHIANS</title>
     <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
-<body>
+<style>
+    .pinto{
+        background-color: rgba(0, 0, 0, 0.1);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        object-fit: cover;
+        
+    }
+</style>
+<body class="pinto">
     <main>
         <div class = "cabecalho">
             <header>
