--- a/paginas/idolos.html
+++ b/paginas/idolos.html
@@ -4,6 +4,15 @@
     <style>
         .cassio{
             display:flex;
+            border: solid black 1px;
+        }
+        .socrates{
+            display:flex;
+            border: solid black 1px;
+        }
+        .marcelinho{
+            display:flex;
+            border: solid black 1px;
         }
 
     
@@ -58,7 +67,7 @@
         <hr>
         <article>
             <h2 style="text-align: center;" >"DOUTOR" SÓCRATES</h2>  
-        <div class="cassio">
+        <div class="socrates">
             <img src="../Imagens/socrates.jpg" title="socrates" alt="nao carregou" width="350" style="margin-left: 320px;">
             <ul>
                 <h4>Títulos:</h4>
@@ -75,7 +84,7 @@
         <hr>
         <article>
             <h2 style="text-align: center;">PÉ DE ANJO</h2>
-            <div class="cassio">
+            <div class="marcelinho">
             <img src="../Imagens/marcelinho.jpeg" alt="nao carrregou" title="marcelinho" width="350" style="margin-left: 372px;" >
             <ul>
                 <h4>Títulos:</h4>
