Atualização flexbox tela escudos

--- a/paginas/escudo.html
+++ b/paginas/escudo.html
@@ -32,20 +32,18 @@
             <p>A história do escudo do Corinthians começa muito antes dele sequer existir e é completamente ligada às raízes do clube. Isso porque, apesar de ter sido fundado em 1º de setembro de 1910, o Corinthians ficou sem um símbolo por três anos. Durante todo esse tempo, era entendido que o time, formado por trabalhadores, era de várzea e não se enquadrava nos padrões de uma equipe de elite no Brasil.</p>
         </div>
         <div class="container">
-            <div class="box1913">
+            <div class="box-start">
                 <h2>1913</h2>
                 <h3>Primeiro escudo</h3>
                 <img src="../Imagens/escudos_1913.jpg" title="1913" alt="escudo1913"width="200" height="200">
                 <p>Em 1913, o Corinthians precisava de um escudo para ingressar na Liga Paulista. Antônia Perrone, namorada de Raphael Perrone, um dos fundadores, bordou o primeiro escudo com as iniciais "C" e "P" (Corinthians Paulista) em preto. Com esse emblema, o Corinthians venceu representantes de Minas Gerais e o FC São Paulo, conquistando uma vaga na Liga.
                 Nesse período, o clube recebeu a alcunha de "Time do Povo", devido à sua base de trabalhadores e operários, um título que perdura até hoje.</p>
-            </div>
-            <div class="box1914">
                 <h2>1914</h2>
                 <h3>Novo ano, novo escudo</h3>
                 <img src="../Imagens/escudos_1914.jpg" title="1914" alt="escudo1914"width="200">
                 <p>Em 1914, o Corinthians abandonou o primeiro escudo "CP" após apenas dois jogos contra o Torino e adotou um novo distintivo com as letras "C" e "P" entrelaçadas dentro de um brasão. Esse emblema foi redescoberto em 2011 por historiadores, confirmando também que o uniforme do clube naquela época era bege. A descoberta foi feita a partir de uma foto deixada por um conselheiro no memorial do clube e pesquisas no Almanaque de Celso Unzelte, revelando um símbolo único na história do Corinthians.</p>
             </div>
-            <div class="box1916">
+            <div class="box-mid">
                 <h2>1916</h2>
                 <h3>Mudanças rebuscadas</h3>
                 <img src="../Imagens/escudos_1916.jpg" title="1916" alt="escudo1916" width="200" height="200">
@@ -57,20 +55,16 @@
                 <img src="../Imagens/escudos_1916(4).jpg" title="1916(4)" alt="escudo1916(4)" width="200" height="200">
                 <p>Ainda em 1916, para celebrar a conquista do Paulista e o início da construção do estádio da Ponte Grande, o conhecido formato redondo foi apresentado e descartou-se o uso da moldura medieval. As letras, por sua vez, mantiveram-se iguais por mais alguns anos, até 1919, quando vieram alterações expressivas.</p>
             </div>
-            <div class="box1919">
+            <div class="box-end">
                 <h2>1919</h2>
                 <h3>Aproximando-se do atual</h3>
                 <img src="../Imagens/escudos_1919.jpg" title="1919" alt="escudo1919" width="100" height="100">
                 <p>Em 1919, o escudo do clube passou a exibir a bandeira do estado de São Paulo, o nome completo do clube e a data de sua fundação, sendo pintado pela primeira vez na fachada do pavilhão da Ponte Grande. Esse design permaneceu até 1926, quando o ex-ponta-direita Francisco Rebolo Gonsales adicionou elementos como remos, boia e âncora, representando os esportes aquáticos praticados no Parque São Jorge. No entanto, somente em 1939 esse novo escudo foi adotado nas camisas do clube.</p>
-            </div>
-            <div class="box1980">
                 <h2>1980</h2>
                 <h3>Mudanças marcantes</h3>
                 <img src="../Imagens/escudos_1980.jpg" title="1980" alt="escudo1980" width="200">
                 <img src="../Imagens/escudos_1980(2).jpg" title="1980(2)" alt="escudo1980(2)" width="200">
                 <p>Em 1919, o escudo do clube passou a exibir a bandeira do estado de São Paulo, o nome completo do clube e a data de sua fundação, sendo pintado pela primeira vez na fachada do pavilhão da Ponte Grande. Esse design permaneceu até 1926, quando o ex-ponta-direita Francisco Rebolo Gonsales adicionou elementos como remos, boia e âncora, representando os esportes aquáticos praticados no Parque São Jorge. No entanto, somente em 1939 esse novo escudo foi adotado nas camisas do clube.</p>
-            </div>
-            <div class="box1990">
                 <h2>1990</h2>
                 <h3>Estrelas</h3>
                 <img src="../Imagens/escudos_1990.jpg" title="1990" alt="escudo1990" width="150" height="200">
