--- a/paginas/Hino.html
+++ b/paginas/Hino.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>VAI CORINTHIANS</title>
     <link rel="stylesheet" href="../estilos/estilos.css">
+    <script src="../scripts/script.js"></script>
 </head>
 <body>
     <div class = "cabecalho">
@@ -29,42 +30,58 @@
             <article>
                 <h2 class="black">HINO</h2>
                 <hr>
-                <img src="../Imagens/cantandohino.jpg" title="cantandohino" alt="não carregou" width="400"/>
-                <h2>O PRIMEIRO HINO</h2>
-                <p>"Salve o Corinthians, o campeão dos campeões". O hino do Corinthians nem sempre começou com esse famoso verso. Em 1930, a primeira composição dedicada ao clube era intitulada como uma "marchinha". Oferecido ao presidente Felipe Collona, que dirigiu o Timão entre 1929 e 1930, o primeiro hino da história foi gravado pela dupla Guarani e Pirajá. A música, escrita por La Rosa e letrada por Eduardo Dohmen, permanece eternizada pelo vocabulário e gênero musical típico.</p>
-                <P>Luctar… Luctar…<br>
-                    É nosso lema sempre, para a glória,<br>
-                    Jogar… Jogar…<br>
-                    E conquistar os louros da victória,<br>
-                    E proclamar, nosso pendão<br>
-                    É alvinegro e sempre há de brilhar,<br>
-                    Luctar, viril<br>
-                    Para a grandeza e glória do Brasil<br>
-                    Corinthians… Corinthians…<br>
-                    A glória será o teu repouso<br>
-                    E nós unidos sempre<br>
-                    Elevaremos teu nome glorioso.</P>
+                    <!-- <img src="../Imagens/cantandohino.jpg" title="cantandohino" alt="não carregou" width="400"/> -->
+                    <div class="introhino1">
+                        <h2>O PRIMEIRO HINO</h2>
+                        <p>"Salve o Corinthians, o campeão dos campeões". O hino do Corinthians nem sempre começou com esse famoso verso. Em 1930, a primeira composição dedicada ao clube era intitulada como uma "marchinha". Oferecido ao presidente Felipe Collona, que dirigiu o Timão entre 1929 e 1930, o primeiro hino da história foi gravado pela dupla Guarani e Pirajá. A música, escrita por La Rosa e letrada por Eduardo Dohmen, permanece eternizada pelo vocabulário e gênero musical típico.</p>
+                        <button id="playButton">Reproduzir Hino</button>
+                        <audio id="audioPlayer" src="../Audios/SnapInsta.io - Primeiro Hino do Corinthians ( 1930 ) (128 kbps).mp3"></audio>
+                        <p></p>
+                    </div>
+                    <div class="hino1">
+                        <P>Luctar… Luctar…<br>
+                            É nosso lema sempre, para a glória,<br>
+                            Jogar… Jogar…<br>
+                            E conquistar os louros da victória,<br>
+                            E proclamar, nosso pendão<br>
+                            É alvinegro e sempre há de brilhar,<br>
+                            Luctar, viril<br>
+                            Para a grandeza e glória do Brasil<br>
+                            Corinthians… Corinthians…<br>
+                            A glória será o teu repouso<br>
+                            E nós unidos sempre<br>
+                            Elevaremos teu nome glorioso.
+                        </P>
+                    </div>
                 <hr>
             </article>
             <article>
-                <h2>HINO ATUAL</h2>
-                <p>O segundo e atual hino do Timão foi composto pelo radialista Lauro D'Avila em 1953. Com uma letra muito próxima ao que a torcida sentia em relação ao Corinthians, o hino rapidamente ficou marcado, ao contrário do primeiro, que, aos poucos, ficou no anonimato. Gravado pela primeira vez nos estúdios da Rádio Bandeirantes e lançado pela gravadora Continental, sob a voz cantor Osny Silva, "O Campeão dos Campeões" permanece até hoje entoado nos estádios em que o Timão joga.</p> 
-                <p>Salve o Corinthians<br>
-                    O campeão dos campeões<br>
-                    Eternamente<br>
-                    Dentro dos nossos corações<br>
-                    Salve o Corinthians<br>
-                    De tradições e glórias mil<br>
-                    Tu és orgulho<br>
-                    Dos desportistas do Brasil<br>
-                    Teu passado é uma bandeira<br>
-                    Teu presente, uma lição<br>
-                    Figuras entre os primeiros<br>
-                    Do nosso esporte bretão<br>
-                    Corinthians grande<br>
-                    Sempre altaneiro<br>
-                    És do Brasil<br>
-                    O clube mais brasileiro</p>   
+                <div class="introhino2">
+                    <h2>HINO ATUAL</h2>
+                    <p>O segundo e atual hino do Timão foi composto pelo radialista Lauro D'Avila em 1953. Com uma letra muito próxima ao que a torcida sentia em relação ao Corinthians, o hino rapidamente ficou marcado, ao contrário do primeiro, que, aos poucos, ficou no anonimato. Gravado pela primeira vez nos estúdios da Rádio Bandeirantes e lançado pela gravadora Continental, sob a voz cantor Osny Silva, "O Campeão dos Campeões" permanece até hoje entoado nos estádios em que o Timão joga.</p>
+                    <button id="playButton2">Reproduzir Hino</button>
+                    <audio id="audioPlayer2" src="../Audios/SnapInsta.io - HINO DO CORINTHIANS (128 kbps).mp3"></audio>
+                    <p></p>
+                </div>
+                <div class="hino2">
+                    <p>Salve o Corinthians<br>
+                        O campeão dos campeões<br>
+                        Eternamente<br>
+                        Dentro dos nossos corações<br>
+                        Salve o Corinthians<br>
+                        De tradições e glórias mil<br>
+                        Tu és orgulho<br>
+                        Dos desportistas do Brasil<br>
+                        Teu passado é uma bandeira<br>
+                        Teu presente, uma lição<br>
+                        Figuras entre os primeiros<br>
+                        Do nosso esporte bretão<br>
+                        Corinthians grande<br>
+                        Sempre altaneiro<br>
+                        És do Brasil<br>
+                        O clube mais brasileiro
+                    </p>
+                </div>   
             </article>
         </section>
     </main>
