--- a/paginas/idolos.html
+++ b/paginas/idolos.html
@@ -15,6 +15,10 @@
             border: solid black 1px;
         }
 
+        .center{
+            text-align: center;
+        }
+
     
     </style>
     <meta charset="UTF-8">
@@ -46,7 +50,7 @@
         <h2 class="black">MAIORES ÍDOLOS DA HISTÓRIA DO CORINTHIANS</h2>
         <hr>
         <article>
-            <h2 style="text-align: center">"GIGANTE" CÁSSIO</h2>
+            <h2 class="center">"GIGANTE" CÁSSIO</h2>
             <div class="cassio">
             <img src="../Imagens/cassio.jpg" title="cassio" alt="nao carregou" width="350" style="margin-left: 370px;" >
             <ul style="font-size: larger;">
@@ -66,7 +70,7 @@
         </article>
         <hr>
         <article>
-            <h2 style="text-align: center;" >"DOUTOR" SÓCRATES</h2>  
+            <h2 class="center">"DOUTOR" SÓCRATES</h2>  
         <div class="socrates">
             <img src="../Imagens/socrates.jpg" title="socrates" alt="nao carregou" width="350" style="margin-left: 320px;">
             <ul>
@@ -83,7 +87,7 @@
         </article>
         <hr>
         <article>
-            <h2 style="text-align: center;">PÉ DE ANJO</h2>
+            <h2 class="center">PÉ DE ANJO</h2>
             <div class="marcelinho">
             <img src="../Imagens/marcelinho.jpeg" alt="nao carrregou" title="marcelinho" width="350" style="margin-left: 372px;" >
             <ul>
